# haiku

./: .gitignore  Cargo.toml  README.md
haiku-error/: Cargo.toml
haiku-error/src/: lib.rs  service.rs
haiku-models-common/: #Cargo.toml#  Cargo.toml
haiku-svc-snippets/: Cargo.toml  Dockerfile  README.md
haiku-svc-snippets/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
haiku-svc-snippets/migrations/2022-02-24-050411_create_snippets_languages/: down.sql  up.sql
haiku-svc-snippets/migrations/2022-02-24-051917_create_tags_snippets/: down.sql  up.sql
haiku-svc-snippets/migrations/2022-02-24-065142_create_snippet/: down.sql  up.sql
haiku-svc-snippets/migrations/2022-02-24-065311_create_language/: up.sql
haiku-svc-snippets/migrations/2022-02-24-070411_create_snippets_languages/: down.sql  up.sql
haiku-svc-snippets/migrations/2022-02-24-071030_create_tags/: down.sql  up.sql
haiku-svc-snippets/migrations/2022-02-24-071917_create_tags_snippets/: down.sql  up.sql
haiku-svc-snippets/migrations/2022-02-25-053408_add_constraints/: down.sql  up.sql
haiku-svc-snippets/src/: controller.rs  data.rs  main.rs  schema.rs  services.rs
haiku-svc-snippets/src/controller/: snippets.rs
haiku-svc-snippets/src/data/: insert.rs  query.rs  traits.rs
haiku-svc-snippets/src/data/insert/: language.rs  snippet.rs  tag.rs
haiku-svc-snippets/src/data/query/: language.rs  snippet.rs  tag.rs
haiku-svc-snippets/src/data/traits/: base_query.rs
haiku-svc-snippets/src/endpoints/: snippets.rs
haiku-svc-snippets/src/services/: snippets.rs
src/: main.rs
(+1 files in other folders)
