[package]
name = "haiku-error"
version = "0.1.0"
authors = ["Florian Büstgens <florian.buestgens@efficient-dev.com>"]
readme = "README.md"
repository = "https://github.com/fasync/Haiku"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
derive_more = "0.99.17"