[package]
name = "haiku-svc-snippets"
version = "0.1.0"
authors = ["Florian Büstgens <florian.buestgens@efficient-dev.com>"]
readme = "README.md"
repository = "https://github.com/fasync/Haiku"
edition = "2021"

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-web-httpauth = "0.5.1"
actix-rt = "2.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "2.0.2"
alcoholic_jwt = "1.0.1"
reqwest = "0.11.9"
haiku-error = { path = "../haiku-error" }
